# langchaintutorial

./: .gitignore  1-simple-chat.py  2-stream.py  3-ragdemo.py  AzureEvmHanaStreamlitBot.py  embedding-batch.py  embedding-customize.py  embedding-example.py  get-deployment.sh  harmonized-models.py  image-input.py  l1.ipynb  langchain_tests.ipynb  mailmap.txt  main.py  mcptest.py  mysql-structuredop.py  nativeclient-1.py  orchestration-1-basic.py  orchestration-2-textformat.py  orchestration-3-jsonformat.py  orchestration-4-tool-weather.py  orchestration-5-tool-calc.py  pyproject.toml  rag-graph-gw.py  ragvector-streamlit.py  sentiment-analyser.py  simpleagent.py  test1.py  tryagenticai.py
.ipynb_checkpoints/: langchain_tests-checkpoint.ipynb
BasicGenAI/: 1-helloworld.py  2-cli-chat.py
BasicGenAI/3-rag-example/: 1-ingest.py  2-cli-embedding.py
BasicGenAI/4-hana-kg/: 1-ingext-kg.py  2-chat-kg.py  debug-kg.py
BasicGenAI/5-mcp-one/: agent_client.py  mcp_server.py  pyproject.toml  s4hana_product_api_docs.py
LLM-Build/: 1-Tokenizer.ipynb  2-Vector_embedding.ipynb  Architecture Classification finetuning.ipynb  Classification finetuning data loading.ipynb  Fixed_Size_RAG_Pipeline.ipynb  Instruction fine-tuning dataset prep loading.ipynb  LLM Training Validation Loss.ipynb  RAG_Chunking_Strategies.ipynb  Semantic_Chunking_RAG_Pipeline.ipynb  Structural_Chunking_RAG_Pipeline.ipynb
agentic-aitools/: main.py  tools.py  utils.py
connector-mcp-working/: agent-client.py  mcp-server.py  pyproject.toml
master-agents/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DOCUMENT-MANAGEMENT-FEATURE.md  README.md  build_and_push.sh  docker-compose.yaml
master-agents/backend/: .dockerignore  .env.example  Dockerfile  README_DEEPAGENT.md  README_DOCUMENT_INGESTION.md  README_SERVICES.md  pyproject.toml  run_server.py
master-agents/backend-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  ORGANIZATION.md  README.md  eslint.config.js  pnpm-lock.yaml  run_mcp_inspector.sh
master-agents/backend-mcp/src/: server.ts
master-agents/backend-mcp/src/api/: documentRoutes.ts
master-agents/backend-mcp/src/services/: documentIngestionService.ts  imageExtractionService.ts  imageStorageService.ts  ingestionJobManager.ts
master-agents/backend-mcp/src/tools/: addTool.ts  documentTools.ts  (+3 more)
master-agents/backend/app/: main.py
master-agents/backend/app/api/: audio.py  chat.py  chat_history.py  user.py
master-agents/backend/app/core/: config.py
master-agents/backend/app/models/: schemas.py
master-agents/backend/app/services/: audio_transcription.py  deepagent_service.py  llm_service.py  mock_service.py  service_factory.py  session_storage.py  title_generation.py  user_service.py
master-agents/frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  pnpm-lock.yaml
master-agents/frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
master-agents/frontend/tests/: README.md
master-agents/k8s/: README.md  deploy.sh  deployment.yaml  secret.template.yaml
master-agents/prototyping/: README.md  audio_transcription.py  deepagents_test.py  download_sample.py
mcpagents/: client.py  server.py
simple-mcp-serveragent/: simple-mcp-server.py
(+28 files in other folders)
