[project]
name = "langchaintutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "sap-ai-sdk-core>=3.3.0",
    "sap-ai-sdk-gen>=6.7.0",
]
