[project]
name = "langchaintutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "google-api-core>=2.30.3",
    "google-auth>=2.49.2",
    "hana-ml>=2.28.26031701",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.3",
    "langchain-core>=1.2.28",
    "langchain-hana>=1.1.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.9",
    "mcp[cli]>=1.0.0",
    "networkx>=3.6.1",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "sap-ai-sdk-core>=3.3.0",
    "sap-ai-sdk-gen[all]>=6.7.0",
    "tiktoken>=0.12.0",
]
