[project]
name = "super-agent-backend"
version = "0.1.0"
description = "Backend for Super Agent Application"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "deepagents",
    "python-dotenv>=1.2.0",
    "sap-ai-sdk-gen[amazon]>=6.6.0",
    "google-genai>=1.64.0",
    "google-api-core>=2.30.0",
    "google-cloud-aiplatform>=1.138.0",
    "langchain_mcp_adapters>=0.2.1",
    "pypdf>=6.7.1",
    "python-docx>=1.2.0",
    "langchain-openai>=1.1.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
